modules/ml/kubeflow/ingress.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: kubeflow-gateway
  namespace: kubeflow
spec:
  selector:
    istio: ingress
  servers:
  - port:
      number: 80
      name: http
      protocol: HTTP
    hosts:
    - "*"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kubeflow-centraldashboard
  namespace: kubeflow
spec:
  hosts:
  - "*"
  gateways:
  - kubeflow-gateway
  http:
  - match:
    - uri:
        prefix: /
    - uri:
        prefix: /login
    - uri:
        prefix: /auth
    - uri:
        prefix: /dashboard
    route:
    - destination:
        host: centraldashboard
        port:
          number: 80
    rewrite:
      uri: /
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: kubeflow-dex
  namespace: auth
spec:
  hosts:
  - "*"
  gateways:
  - kubeflow/kubeflow-gateway
  http:
  - match:
    - uri:
        prefix: /dex
    route:
    - destination:
        host: dex
        port:
          number: 5556
